5.Usuarios/Keycloack/simple-ingress/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=keycloak
        - --email-domain=*
        - --client-id=openfaas
        - --client-secret=a92d17a9-7302-4c23-bc53-86b187ed928d
        - --login-url=https://keycloak.192.168.64.4.nip.io/auth/realms/tfm/protocol/openid-connect/auth
        - --redeem-url=https://keycloak.192.168.64.4.nip.io/auth/realms/tfm/protocol/openid-connect/token
        - --validate-url=https://keycloak.192.168.64.4.nip.io/auth/realms/tfm/protocol/openid-connect/userinfo
        - --http-address=:4180
        - --scope=profile
        - --ssl-insecure-skip-verify=true
        - --ssl-upstream-insecure-skip-verify=true
        - --pass-access-token=true
        - --pass-authorization-header=true
        - --set-xauthrequest=true
        - --set-authorization-header=true
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
